fix spacing issue with header component.

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -13,9 +13,8 @@ a {
 }
 
 .leftside {
-  display: flex;
-  flex-direction: row;
   margin-left: 2%;
+  margin-right: 2%;
 }
 
 #logo {
